fixed some issues, but you know the bugs never end